362
with the change in contractiveness I get something different now:

t0488.scala:17: error: diverging implicit expansion for type () => Option[T]
starting with method arbContainer in object Arbitrary
    () => arbitrary[T].map(_::Nil)
          ^
one error found
